--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,16 @@
 <head>
   <meta charset="UTF-8">
 
+
+  <!-- Android / PWA -->
+  <link rel="manifest" href="{% static 'site.webmanifest' %}">
+  <meta name="application-name" content="JFGC Dev">
+
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="{% static 'icons/iconx192.webp' %}">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="JFGC Dev">
+
   <!-- Responsive / color-scheme -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
