--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,11 @@
       </p>
       <div class="d-flex gap-2 justify-content-center justify-content-lg-start mt-3">
         <a href="{% url 'services:service_list' %}" class="btn btn-primary">Ver servicios</a>
+
         <a href="https://wa.me/+34639949187"
-           class="btn btn-outline-secondary"
-           target="_blank" rel="noopener noreferrer nofollow">
+          class="btn btn-outline-success  d-inline-flex align-items-center"
+          target="_blank" rel="noopener noreferrer nofollow">
+          <i class="fab fa-whatsapp me-2"></i>
           Hablar ahora
         </a>
       </div>
@@ -68,16 +70,16 @@
   <div class="mt-4 text-center">
     <h5>Tecnologías</h5>
     <div class="d-flex justify-content-center flex-wrap mt-3">
-      <img src="{% static 'icons/git.webp' %}"         alt="Git"         class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/html5.webp' %}"       alt="HTML5"       class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/css3.webp' %}"        alt="CSS3"        class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/javascript.webp' %}"  alt="JavaScript"  class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/python.webp' %}"      alt="Python"      class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/django.webp' %}"      alt="Django"      class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/bootstrap.webp' %}"   alt="Bootstrap"   class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/react.webp' %}"       alt="React"       class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/mySQL_img.webp' %}"   alt="MySQL"       class="m-2" width="30" height="30" loading="lazy" decoding="async">
-      <img src="{% static 'icons/tailwindcss.webp' %}" alt="Tailwindcss" class="m-2" width="30" height="30" loading="lazy" decoding="async">
+      <img src="{% static 'icons/git.png' %}"         alt="Git"        width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/html5.png' %}"       alt="HTML5"      width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/css3.png' %}"        alt="CSS3"       width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/javascript.png' %}"  alt="JavaScript" width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/python.png' %}"      alt="Python"     width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/django.png' %}"      alt="Django"     width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/bootstrap.png' %}"   alt="Bootstrap"  width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/react.png' %}"       alt="React"      width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/mysql.png' %}"       alt="MySQL"      width="30px" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/vite.png' %}"        alt="Vite"       width="30px" class="m-2" loading="lazy" decoding="async">
     </div>
   </div>
 
