--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -188,7 +188,7 @@ h1:hover { color: var(--secondary-color); transform: scale(1.05); transition: tr
 
 #userMenu.dropdown-toggle::after { display: none; }
 
-.navbar-brand .brand-logo { height: 52px; width: auto !important; max-width: none !important; object-fit: contain; display: block;}
+.navbar-brand .brand-logo { height: 62px; width: auto !important; max-width: none !important; object-fit: contain; display: block;}
 
 .navbar { padding-top: .5rem;  padding-bottom: .5rem;}
 
@@ -287,7 +287,7 @@ h1:hover { color: var(--secondary-color); transform: scale(1.05); transition: tr
 /* Responsive: baja un poco en móviles si hace falta */
 @media (max-width: 576px) {
   .navbar-brand .brand-logo {height: 44px;}
-  .nav-avatar { width: 32px; height: 32px; }
+  .nav-avatar { width: 42px; height: auto; }
 
   .profile-card .card-title {
     font-size: 1.15rem;   
