--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -23,7 +23,7 @@
     
     <!-- Pie de página -->
     <div class="post-footer text-center mt-5">
-        <a href="{% url 'post_list' %}" class="cta-button cta-section">Volver al blog</a>
+        <a href="{% url 'blog:post_list' %}" class="cta-button cta-section">Volver al blog</a>
     </div>
 </div>
 {% endblock %}
