--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title mb-3">
-                        <a href="{% url 'post_detail' post.id %}" class="stretched-link text-decoration-none text-primary">
+                        <a href="{% url 'blog:post_detail' post.id %}" class="stretched-link text-decoration-none text-primary">
                             {{ post.title }}
                         </a>
                     </h5>
