feat(core): add Terms of Service page + routes; align with privacy/cookies
Create core/legal/terms_of_service.html with same structure as Privacy/Cookies (header, index, sections, 'Back to top').

Add terms_of_service view and map core:terms_of_service at /legal/terms-of-service/.

Update legal copy to reference Pi Network payments and link to Privacy & Cookies.

Keep legal pages consistent in tone/UX; reusable layout via base.html.

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -223,6 +223,7 @@
               <li class="list-inline-item mx-2"><a href="/services/">Servicios</a></li>
               <li class="list-inline-item mx-2"><a href="{% url 'core:legal_privacidad' %}">Privacidad</a></li>
               <li class="list-inline-item mx-2"><a href="{% url 'core:legal_cookies' %}">Cookies</a></li>
+              <li class="list-inline-item mx-2"><a href="{% url 'core:terms_of_service' %}">Términos de Servicio</a></li>
               <li class="list-inline-item mx-2"><a href="#" data-ck-open>Preferences</a></li>
             </ul>
           </div>
