--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -58,7 +58,8 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
 
-  <link rel="preload" as="image" href="{% static 'images/logo-jfgc.webp' %}">
+  <link rel="prefetch" as="image" href="{% static 'images/logo-jfgc.webp' %}">
+
 
   <!-- CSS externos existentes -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
