Fix skills icons sizing by scoping styles and allowing larger variants
* Remove global selector that forced all .d-flex img to max width 25px
* Add scoped container class skills-icons for the tech row
* Set default icon width 30px with clean single transition and CSS var fallbacks
* Add optional tech-icon-lg utility to render selected icons at 60px
* Update template markup to use skills-icons and tech-icon-lg on the Python icon
* Keep hover animation and visual polish consistent across icons

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -69,17 +69,17 @@
   <!-- Tecnologías (lazy) -->
   <div class="mt-4 text-center">
     <h5>Tecnologías</h5>
-    <div class="d-flex justify-content-center flex-wrap mt-3">
-      <img src="{% static 'icons/git.png' %}"         alt="Git"        width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/html5.png' %}"       alt="HTML5"      width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/css3.png' %}"        alt="CSS3"       width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/javascript.png' %}"  alt="JavaScript" width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/python.png' %}"      alt="Python"     width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/django.png' %}"      alt="Django"     width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/bootstrap.png' %}"   alt="Bootstrap"  width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/react.png' %}"       alt="React"      width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/mysql.png' %}"       alt="MySQL"      width="30px" class="m-2" loading="lazy" decoding="async">
-      <img src="{% static 'icons/vite.png' %}"        alt="Vite"       width="30px" class="m-2" loading="lazy" decoding="async">
+    <div class="d-flex justify-content-center flex-wrap mt-3 skills-icons">
+      <img src="{% static 'icons/git.png' %}"         alt="Git"        class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/html5.png' %}"       alt="HTML5"      class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/css3.png' %}"        alt="CSS3"       class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/javascript.png' %}"  alt="JavaScript" class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/python.png' %}"      alt="Python"     class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/django.png' %}"      alt="Django"     class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/bootstrap.png' %}"   alt="Bootstrap"  class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/react.png' %}"       alt="React"      class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/mysql.png' %}"       alt="MySQL"      class="m-2" loading="lazy" decoding="async">
+      <img src="{% static 'icons/vite.png' %}"        alt="Vite"       class="m-2" loading="lazy" decoding="async">
     </div>
   </div>
 
