updating email - contact infor & styles for tech-stack

--- a/core/templates/core/legal/cookies.html
+++ b/core/templates/core/legal/cookies.html
@@ -112,7 +112,7 @@
     <h2 class="h4">6. Contacto</h2>
     <p>
       Si tienes dudas sobre esta política, escríbeme a
-      <a href="mailto:josefe59@hotmail.com">josefe59@hotmail.com</a>.
+      <a href="mailto:devdivecode@gmail.com">devdivecode@gmail.com</a>.
     </p>
   </section>
 
