--- a/core/templates/core/legal/terms_of_service.html
+++ b/core/templates/core/legal/terms_of_service.html
@@ -123,7 +123,7 @@
   <section id="contacto" class="mt-4">
     <h2 class="h4">11. Contacto</h2>
     <p class="mb-0">
-      Dudas sobre estos términos: <a href="mailto:josefe59@hotmail.com">josefe59@hotmail.com</a>.
+      Dudas sobre estos términos: <a href="mailto:devdivecode@gmail.com">Contacta aquí</a>.
     </p>
   </section>
 
