--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -45,7 +45,7 @@
           {% if project.url %}
             <a
               href="{{ project.url }}"
-              class="btn btn-primary mt-auto"
+              class="btn btn-outline-cta rounded-pill px-4 py-2"
               target="_blank"
               rel="noopener">
               Ver Proyecto
