--- a/users/templates/accounts/login.html
+++ b/users/templates/accounts/login.html
@@ -13,7 +13,7 @@
       </div>
 
       <button id="btn-pi-login"
-              class="btn btn-primary w-100"
+              class="cta-button cta-section px-4 py-2 w-100"
               type="button"
               data-login-url="{% url 'users:pi_login' %}"
               data-redirect-url="{% url 'users:profile' %}">
