--- a/users/templates/accounts/register.html
+++ b/users/templates/accounts/register.html
@@ -36,7 +36,7 @@
 
       {{ form.recaptcha_token }} {# <- importantísimo #}
 
-      <button class="btn btn-primary w-100" type="submit">Registrarme</button>
+      <button class="cta-button cta-section px-4 py-2 w-100" type="submit">Registrarme</button>
     </form>
 
       <!-- Aviso reCAPTCHA con tarjeta ligera e icono -->
