--- a/services/templates/services/service_list.html
+++ b/services/templates/services/service_list.html
@@ -49,7 +49,7 @@
           </p>
 
           <button
-            class="cta-button cta-section">
+            class="btn btn-outline-cta rounded-pill px-4 py-2">
             Paga con
             <img
               src="{% static 'images/pi-icon.svg' %}"
