--- a/services/templates/services/payment_success.html
+++ b/services/templates/services/payment_success.html
@@ -119,8 +119,8 @@
           </div>
 
           <div class="d-flex flex-wrap gap-2 mt-4">
-            {% if order %}<a href="{{ order.get_absolute_url }}" class="btn btn-primary">Ver pedido</a>{% endif %}
-            <a href="{% url 'orders:list' %}" class="btn btn-outline-secondary">Mis pedidos</a>
+            {% if order %}<a href="{{ order.get_absolute_url }}" class="cta-button cta-section">Ver pedido</a>{% endif %}
+            <a href="{% url 'orders:list' %}" class="btn btn-outline-cta rounded-pill px-4 py-2">Mis pedidos</a>
             <a href="{% url 'services:service_list' %}" class="btn btn-light">Seguir explorando servicios</a>
           </div>
 
