--- a/services/templates/services/service_detail.html
+++ b/services/templates/services/service_detail.html
@@ -82,11 +82,11 @@
         class="cta-button cta-section"
         data-checkout-url="{% url 'orders:checkout_service' service.slug %}">
         Pagar con
-        <img src="{% static 'images/pi-icon.svg' %}" alt="Pi" class="pi-icon" width="18" height="18">
+        <img src="{% static 'images/pi-icon.svg' %}" alt="Pi" class="pi-icon">
       </button>
     {% else %}
-      <a class="cta-button cta-section" href="{% url 'users:login' %}?next={{ request.get_full_path }}">
-        Iniciar sesión para pagar
+      <a class="cta-button" href="{% url 'users:login' %}?next={{ request.get_full_path }}">
+        Inicia sesión
       </a>
     {% endif %}
   </div>
